# Spell

./: CMakeLists.txt  README.md
include/def/: config.hpp  dev.hpp  err.hpp  flags.hpp  modes.hpp  types.hpp
include/io/: Device.hpp  Memory.hpp  Ptrctl.hpp  RaiiUniIO.hpp  Reg64Table.hpp  UniIO.hpp
include/io/dev/: Device.hpp  DeviceBus.hpp  DeviceIO.hpp
include/io/dev/bad/: BadDevice.hpp  BadDeviceIO.hpp
include/io/dev/term/: TermDevice.hpp  TermDeviceIO.hpp
include/io/impl/: MemIO.hpp  RegIO.hpp
include/io/mem/: MemIO.hpp  Memory.hpp
include/io/reg/: Reg64Table.hpp  RegIO.hpp
include/mach/: Instruction.hpp  Machine.hpp  instructions.hpp
include/machine/: Instruction.hpp  Machine.hpp  Memory.hpp  Reg64Struct.hpp  config.hpp  types.hpp
src/: CMakeLists.txt
src/io/: MemIO.cpp  Memory.cpp  RegIO.cpp
src/io/dev/: DeviceBus.cpp
src/io/dev/term/: TermDevice.cpp  TermDeviceIO.cpp
src/io/mem/: MemIO.cpp  Memory.cpp
src/mach/: Machine.cpp
src/machine/: Memory.cpp
src/main/: spell.cpp  spelldbg.cpp
